--- a/class16.qmd
+++ b/class16.qmd
@@ -540,8 +540,8 @@ How about a confidence interval for the risk difference, too?
 |   *Total*    | *51* |  *275* |   *326* |
 
 -   Odds = Probability / (1 - Probability)
--   Sample Odds of COI if Early = $\frac{34/161}{1 - (34/161)}$ = `r round_half_up((34/161)/(1-(34/161)), 3)`
--   Sample Odds of COI if Delayed = $\frac{17/165}{1 - (17/165)}$ = `r round_half_up((17/165)/(1-(17/165)), 3)`
+-   Sample Odds of COM if Early = $\frac{34/161}{1 - (34/161)}$ = `r round_half_up((34/161)/(1-(34/161)), 3)`
+-   Sample Odds of COM if Delayed = $\frac{17/165}{1 - (17/165)}$ = `r round_half_up((17/165)/(1-(17/165)), 3)`
 -   Ratio of these two Odds are `r round_half_up(((34/161)/(1-(34/161))) / ((17/165)/(1-(17/165))),3)`.
 
 ## In a 2x2 table, odds ratio = cross-product ratio.
