Update Class 24 slides.

--- a/class24.qmd
+++ b/class24.qmd
@@ -643,12 +643,22 @@ Jeff Leek: "[How to share data with a statistician](https://github.com/jtleek/da
 ![](c24/gradschool.png)
 
 
-## The Course So Far
+## Ten of the Most Important 431 Ideas
 
-1. Statistics is too important to be left to statisticians.
-2. Models and visualization are the big takeaways, but don't forget about methods for making statistical inferences.
-3. Reproducible research is the current wave. 
-4. Things are changing quickly. We live in interesting times.
+1. You have to visualize and count data to understand it.
+2. 90% of statistical work could be described as data management.
+3. R Markdown and the tidyverse make it easier to do the right thing.
+4. Statistical significance is not a helpful concept.
+5. Point estimates and confidence intervals are useful ideas.
+
+## Ten of the Most Important 431 Ideas
+
+6. Most statistical procedures are in fact regression models.
+7. All statistical methods involve assumptions worth checking.
+8. The bootstrap is a very useful, and somewhat underused tool.
+9. Prediction models need to predict well in new situations.
+10. Statistical thinking is far too important to be left to statisticians.
+
 
 ---
 
